<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/framelayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".ui.MainActivity"
	>
	<TextView
		android:id="@+id/header"
		style="@style/Base.TextAppearance.AppCompat.Headline"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="@dimen/padding_"
		android:text="@string/are_happy"
		/>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="150dp"
		android:layout_marginBottom="50dp"
		android:gravity="center"
		android:orientation="horizontal"
		android:weightSum="2"
		>
		
		<ImageView
			android:id="@+id/smile"
			style="@style/ImageTheme"
			android:src="@drawable/smile"
			/>
		<ImageView
			android:id="@+id/sad"
			style="@style/ImageTheme"
			android:src="@drawable/angry"
			/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="350dp"
		android:background="@drawable/btn_group_background"
		android:orientation="vertical"
		>
		
		<TextView
			android:id="@+id/like"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="20dp"
			android:gravity="center"
			android:text="@string/what_likes"
			android:textColor="@android:color/white"
			android:textSize="20sp"
			/>
		
		<LinearLayout
			android:id="@+id/group_btns"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal"
			>
			
			<Button
				android:id="@+id/response"
				style="@style/CustomButtonTheme"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/response_time"
				/>
			
			<Button
				android:id="@+id/help"
				style="@style/CustomButtonTheme"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/help"
				
				/>
			
			<Button
				android:id="@+id/cost"
				style="@style/CustomButtonTheme"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/cost"
				/>
		
		
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal"
			>
			
			<Button
				android:id="@+id/value"
				style="@style/CustomButtonTheme"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/value"
				
				/>
			
			<Button
				android:id="@+id/exp"
				style="@style/CustomButtonTheme"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/experience"
				/>
		</LinearLayout>
		
		<Button
			android:id="@+id/submit"
			android:layout_width="@dimen/submit_width"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="25dp"
			android:background="@drawable/btn_submit_background"
			android:text="@string/submit"
			android:textColor="@android:color/white"
			/>
	</LinearLayout>
</LinearLayout>